# keymagic-3

./: .dockerignore  .gitignore  BUILD.md  CLAUDE.md  CODE_SIGNING.md  Cargo.toml  DEPLOY_UPDATES.md  Dockerfile.build  ENGINE_LOGIC.md  IBUS_IMPLEMENTATION_PLAN.md  KM2_ENCODING_NOTES.md  KM2_FORMAT.md  KMS_FORMAT.md  MACOS_IMK_DISTRIBUTION_STRATEGY.md  MACOS_IMK_IMPLEMENTATION_PLAN.md  MACOS_IMK_PROCESS_DETECTION.md  PHASE-2.md  PHASE-5-SUMMARY.md  PHASE-5-TSF-IMPLEMENTATION-PLAN.md  PHASE-5.md  PHASE3_LINUX_PLAN.md  README.md  SDD.md  UPDATE_MECHANISM.md  build-docker.sh  build-linux-package.sh  docker-compose.build.yml  index.html  install.sh  keymagic.gpg  update-version.ps1  update-version.sh  updates.json  updates.sample.json
keymagic-core/: Cargo.toml  ENGINE_LOGIC.md  README.md
keymagic-core-cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  build-windows.bat  build.sh  run_test.bat
keymagic-core-cpp/cmake/: KeyMagicCoreConfig.cmake.in
keymagic-core-cpp/include/keymagic/: engine.h  keymagic.h  km2_format.h  types.h  virtual_keys.h
keymagic-core-cpp/src/api/: c_api.cpp  memory.cpp
keymagic-core-cpp/src/engine/: buffer.cpp  engine.cpp  state.cpp
keymagic-core-cpp/src/km2/: loader.cpp  loader.h  parser.cpp  parser.h  validator.cpp  validator.h
keymagic-core-cpp/src/matching/: capture.cpp  context.cpp  matcher.cpp  matcher.h  pattern.cpp  pattern.h
keymagic-core-cpp/src/processing/: action_generator.cpp  recursive.cpp  rule_application.cpp
keymagic-core-cpp/src/utils/: debug.cpp  debug.h  utf8.cpp  utf8.h  virtual_keys.cpp
keymagic-core-cpp/tests/: CMakeLists.txt  test_hotkey_parsing.cpp
keymagic-core-cpp/tests/common/: test_utils.cpp  test_utils.h
keymagic-core-cpp/tests/integration/: test_backspace_history.cpp  test_engine.cpp  test_engine_debug.cpp  test_keyboard_discovery.cpp  test_km2_loader.cpp  test_pyidaungsu_keystrokes.cpp  test_simple.cpp  test_zawcode_keystrokes.cpp
keymagic-core-cpp/tests/unit/: test_hotkey_parsing.cpp  test_km2_format.cpp  test_km2_metadata.cpp  test_main.cpp  test_types.cpp  test_utf8.cpp  test_virtual_keys.cpp
keymagic-core/examples/: read_km2_info.rs
keymagic-core/include/: README.md  keymagic_core.h
keymagic-core/src/: error.rs  ffi.rs  hotkey.rs  lib.rs
keymagic-core/src/engine/: compat.rs  engine.rs  input.rs  matcher.rs  mod.rs  output.rs  pattern.rs  state.rs  types.rs  utils.rs
keymagic-core/src/error/: mod.rs
keymagic-core/src/km2/: error.rs  loader.rs  mod.rs
keymagic-core/src/types/: errors.rs  km2.rs  mod.rs  opcodes.rs  virtual_keys.rs
keymagic-core/tests/: auto_backspace_test.rs  backspace_history_test.rs  basic_rule_tests.rs  ffi_tests.rs  km2_validation_tests.rs  kms_loader_tests.rs  metadata_tests.rs  modifier_exact_match_test.rs  requirements.txt  run_ffi_tests.bat  run_ffi_tests.sh  state_tests.rs  test_ffi.py  test_keyboard.kms  variable_backref_test.rs  variable_tests.rs  virtual_key_tests.rs  vowel_e_reordering_test.rs
keymagic-core/tests/common/: engine_helpers.rs  mod.rs
keymagic-ibus/: .gitignore  Cargo.toml  Dockerfile.build  Makefile  README.md  docker-compose.build.yml  install.sh  test-debug.sh
keymagic-ibus/build-scripts/: README.md  build-docker.sh  build-linux-package.sh
keymagic-ibus/data/: keymagic.xml  keymagic3.desktop  keymagic3.xml
keymagic-ibus/data/keyboards/: README.md
keymagic-ibus/packaging/: README.md  keymagic3.spec.in
keymagic-ibus/packaging/debian/: control.in  keymagic3-ibus-refresh  postinst  prerm
keymagic-ibus/scripts/: sign-package.sh
keymagic-ibus/src/: config.c  config.h  engine.c  engine.h  ffi_bridge.c  ffi_bridge.h  keycode_map.c  keycode_map.h  lib.rs  main.c
keymagic-macos/: .gitignore  Cargo.toml  Info.plist  Makefile  README.md  ViewIMKLogs.md
keymagic-macos/scripts/: list-certificates.sh  package-macos-dmg.sh  sign-bundle.sh
keymagic-macos/src/: lib.rs
keymagic-macos/src/swift/: KMConfiguration.swift  KMInputController.swift  KeyMagic-Bridging-Header.h  KeycodeMapping.swift  (+2 more)
keymagic-windows/: .gitignore  CHECK_TSF_REGISTRATION.md  CURSOR_POSITION_FIX.md  Cargo.toml  DEVELOPMENT_PROGRESS.md  DUPLICATE_TEXT_FIX.md  PHASE-5.1-PROGRESS.md  PHASE-5.2-PROGRESS.md  PROJECT_STRUCTURE.md  README.md  README_BUILD.md  REORGANIZATION_SUMMARY.md  VERSION_MANAGEMENT.md  build-cross.bat  build-test-loader.bat  build-x64.bat  build.rs  check-versions.bat  clean-all.bat  dev_rebuild.bat  install.bat  make-arm64x-cpp.bat  make-arm64x.bat  make.bat  register-arm64x.bat  setup-x64-target.bat  test-arm64x-all.bat  test-arm64x-loader.cpp  update-version.bat
keymagic-windows/docs/: BUILD_INSTALL.md  TSF_DEBUGGING.md  UNINSTALL_HELP.md  USAGE_GUIDE.md
keymagic-windows/gui/: Cargo.toml  GUI_IMPLEMENTATION_GUIDE.md  README.md  build.rs
keymagic-windows/gui-slint/: Cargo.toml  README.md  build.rs  debug_run.bat  enable_crash_dumps.ps1
keymagic-windows/gui-tauri/: README.md  build.bat
keymagic-windows/include/: keymagic_ffi.h
keymagic-windows/installer/: README.md  build-installer-all.bat  build-installer-arm64.bat  build-installer-x64.bat  build-installer.bat  common.iss  setup-arm64.iss  setup-x64.iss  setup.iss
keymagic-windows/manager/: KeyMagicManager.cpp  README.md  build_manager.bat  build_with_vs.bat  resource.h
keymagic-windows/scripts/: check-versions.ps1  config.bat  functions.bat  update-version.ps1  verify-arm64x.ps1
keymagic-windows/src/: DllMain.cpp  KeyMagicTextService.cpp  KeyMagicTextService.h  ffi.rs  lib.rs
keymagic-windows/tray-manager/: CMakeLists.txt  make.bat  manifest.xml
keymagic-windows/tsf/: CMakeLists.txt  CMakePresets.json  Cargo.toml  Creating-Arm64x-Binaries.md  README.md  TSF_KEY_PROCESSING_IMPLEMENTATION.md  arm64x.cmake  build.rs  build_debug.bat  build_windows.bat  force_uninstall.bat  install.bat  install_debug.bat  uninstall.bat
kms2km2/: Cargo.toml
kms2km2/scripts/: debug_diff.py
kms2km2/src/: include_processor.rs  lib.rs
kms2km2/tests/: compile_error_test.rs  converter_test.rs  icon_validation_test.rs  include_tests.rs  parser_error_handling_test.rs  utf8_bom_test.rs
(+278 files in other folders)
