[package]
name = "keymagic-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core engine for KeyMagic input method editor"

[dependencies]
byteorder = { workspace = true }
thiserror = { workspace = true }

[lib]
name = "keymagic_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[dev-dependencies]
kms2km2 = { path = "../kms2km2" }
hex = "0.4"
pretty_assertions = "1.4"