[package]
name = "keymagic-ibus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "IBus integration for KeyMagic input method editor"

[dependencies]
keymagic-core = { path = "../keymagic-core" }

[build-dependencies]
# Add IBus-specific build dependencies here

[lib]
crate-type = ["cdylib"]