[package]
name = "keymagic-windows"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Windows Text Services Framework integration for KeyMagic"

[dependencies]
keymagic-core = { path = "../keymagic-core" }

[build-dependencies]
# Add Windows-specific build dependencies here

[lib]
crate-type = ["cdylib"]