[package]
name = "keymagic-gui-slint"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.3"
anyhow = "1.0"
keymagic-core = { path = "../../keymagic-core" }
image = { version = "0.24", default-features = false, features = ["bmp", "ico", "png", "jpeg"] }

# Logging and debugging
log = "0.4"
env_logger = "0.11"
backtrace = "0.3"
chrono = "0.4"
dirs = "5.0"

# Better panic handling
human-panic = "2.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
]}

[build-dependencies]
slint-build = "1.3"
winres = "0.1"

[[bin]]
name = "keymagic-config-slint"
path = "src/main.rs"