[package]
name = "keymagic-config"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging", 
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Ole",
    "Win32_Graphics_Dwm",
    "Win32_Globalization",
    "Win32_UI_HiDpi",
]}
keymagic-core = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
winres = "0.1"