[package]
name = "keymagic-gui"
version = "0.0.0"
description = "KeyMagic Cross-Platform GUI"
authors = ["KeyMagic Team"]
license = "GPL-3.0"
repository = "https://github.com/keymagic/keymagic"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "keymagic_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = ["tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
anyhow = "1.0"
dirs = "5.0"
toml = "0.8"
sha2 = "0.10"
base64 = "0.22"
futures = "0.3"
keymagic-core = { path = "../../../keymagic-core" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
once_cell = "1.20"
reqwest = { version = "0.12", features = ["json"] }
semver = "1.0"
tokio = { version = "1", features = ["time"] }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_TextServices",
] }
winreg = "0.52"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"
# TODO: Add zbus when implementing D-Bus integration
# zbus = "4.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
